--- a/src/styles/LoginSignUpHeaderStyles.css
+++ b/src/styles/LoginSignUpHeaderStyles.css
@@ -7,6 +7,7 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 0.3em 3.5em;
+    overflow-x: hidden;
 }
 
 .header--title {
